--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11.11.5",
     "@mui/icons-material": "5.15.19",
     "@mui/material": "5.15.19",
+    "@nivo/pie": "0.87.0",
     "@tanstack/react-query": "5.40.1",
     "axios": "1.7.0",
     "formik": "2.4.6",
